@@ -3,6 +3,7 @@ Pending changes in the mainline
 
 * Support of optional tags for counting resources in C-Find:
   0008-0061, 0008-0062, 0020-1200, 0020-1202, 0020-1204, 0020-1206, 0020-1208, 0020-1209
+* Refactoring leading to speedups with custom image decoders (including Web viewer plugin)
 
 
 Version 1.0.0 (2015/12/15)
